Change quiz creator to use a modal

--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
@@ -1,42 +1,46 @@
-<div [hidden]="created" class="quiz-creator mb-5">
-  <div class="text-center rounded">
-    <h1 class="mb-5">Create a Quiz</h1>
-    <form #optionsForm="ngForm" (ngSubmit)="beginQuiz(optionsForm)" class="fs-5 me-5" ngNativeValidate>
-      <div class="form-check form-switch options-buttons">
-        <div class="d-flex justify-content-between">
-          <p>Written</p>
-          <input class="form-check-input options-selector" type="checkbox" role="switch" name="written" [disabled]="!trueOrFalseSelected && !multipleChoiceSelected" [(ngModel)]="writtenSelected" checked>
+<ng-template #createQuiz>
+  <div class="shadow-sm">
+    <div class="modal-header bg-white">
+      <h5 class="modal-title">Create a quiz</h5>
+    </div>
+    <div class="modal-body">
+      <form #optionsForm="ngForm" (ngSubmit)="beginQuiz(optionsForm)" class="fs-5 ms-n5" ngNativeValidate>
+        <div class="form-check form-switch options-buttons">
+          <div class="d-flex justify-content-between">
+            <p>Written</p>
+            <input class="form-check-input options-selector" type="checkbox" role="switch" name="written" [disabled]="!trueOrFalseSelected && !multipleChoiceSelected" [(ngModel)]="writtenSelected" checked>
+          </div>
+          <div class="d-flex justify-content-between">
+            <p>True/False</p>
+            <input class="form-check-input options-selector" type="checkbox" role="switch" name="trueOrFalse" [disabled]="!writtenSelected && !multipleChoiceSelected" [(ngModel)]="trueOrFalseSelected" checked>
+          </div>
+          <div class="d-flex justify-content-between" *ngIf="set">
+            <p>Multiple Choice</p>
+            <input class="form-check-input options-selector" type="checkbox" role="switch" name="multipleChoice" [disabled]="!writtenSelected && !trueOrFalseSelected || set.cards.length < 4" [(ngModel)]="multipleChoiceSelected" checked>
+          </div>
+          <hr class="mb-4">
+          <div class="d-flex justify-content-between options-dropdown">
+            <p class="options-text">Answer with</p>
+            <select class="form-select w-25 h-50 options-dropdown" name="answerWith" required ngModel>
+              <option selected disabled>Select</option>
+              <option value="term">Term</option>
+              <option value="definition">Definition</option>
+              <option value="both">Both</option>
+            </select>
+          </div>
+          <div class="d-flex justify-content-between">
+            <p class="options-text">Number of questions <span class="fs-6 fw-light text-secondary options-disclaimer" hidden>(selecting more than 10 will create more than 1 question per card)</span></p>
+            <input type="number" class="form-control h-50 w-25" name="numberOfQuestions" min="1" required ngModel>
+          </div>
+          <div class="d-flex justify-content-between mt-4 mb-4">
+            <p class="text-secondary fs-6 fw-light">* Quizzes do not save between reloads</p>
+            <button type="submit" class="btn btn-primary">Begin quiz</button>
+          </div>
         </div>
-        <div class="d-flex justify-content-between">
-          <p>True/False</p>
-          <input class="form-check-input options-selector" type="checkbox" role="switch" name="trueOrFalse" [disabled]="!writtenSelected && !multipleChoiceSelected" [(ngModel)]="trueOrFalseSelected" checked>
-        </div>
-        <div class="d-flex justify-content-between" *ngIf="set">
-          <p>Multiple Choice</p>
-          <input class="form-check-input options-selector" type="checkbox" role="switch" name="multipleChoice" [disabled]="!writtenSelected && !trueOrFalseSelected || set.cards.length < 4" [(ngModel)]="multipleChoiceSelected" checked>
-        </div>
-        <hr class="mb-4">
-        <div class="d-flex justify-content-between options-dropdown">
-          <p class="options-text">Answer with</p>
-          <select class="form-select w-25 h-50 options-dropdown" name="answerWith" required ngModel>
-            <option selected disabled>Select</option>
-            <option value="term">Term</option>
-            <option value="definition">Definition</option>
-            <option value="both">Both</option>
-          </select>
-        </div>
-        <div class="d-flex justify-content-between">
-          <p class="options-text">Number of questions <span class="fs-6 fw-light text-secondary options-disclaimer" hidden>(selecting more than 10 will create more than 1 question per card)</span></p>
-          <input type="number" class="form-control h-50 w-25" name="numberOfQuestions" min="1" required ngModel>
-        </div>
-        <div class="d-flex justify-content-between mt-4 mb-4">
-          <p class="text-secondary fs-6 fw-light">* Quizzes do not save between reloads</p>
-          <button type="submit" class="btn btn-primary">Begin quiz</button>
-        </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
-</div>
+</ng-template>
 
 <div *ngIf="created">
   <div class="container-fluid quiz">
@@ -59,6 +63,6 @@
   </div>
 </div>
 
-<div class="d-flex container-fluid bg-white fixed-bottom shadow">
+<div class="d-flex container-fluid bg-white fixed-bottom shadow navigation-bar">
   <fa-icon class="fs-2 back-arrow" [routerLink]="['/study-set', setId]" [icon]="['far', 'arrow-alt-circle-left']"></fa-icon>
 </div>
