--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -11,6 +11,7 @@ $form-check-input-checked-bg-color: $primary !important;
 $form-check-input-checked-border-color: $primary !important;
 $dropdown-link-active-bg: $primary !important;
 
+$enable-negative-margins: true;
 @import '../../../node_modules/bootstrap/scss/bootstrap.scss';
 
 body {
