--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.scss
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.scss
@@ -1,7 +1,3 @@
-.options-buttons {
-  //margin-right: 2.5vw;
-}
-
 .back-arrow:hover {
   animation: button-color-change 0.25s;
   animation-fill-mode: forwards;
@@ -12,14 +8,8 @@
   margin-top: 4vh;
 }
 
-@media only screen and  (min-device-width : 320px) and (max-device-width : 480px) {
-  //.options-container {
-  //  width: 50%;
-  //}
-  //
-  //.quiz {
-  //  width: 50%;
-  //}
+.navigation-bar {
+  z-index: 10000;
 }
 
 @media only screen and (min-device-width : 768px) and (max-device-width : 7680px) {
