--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
@@ -1,6 +1,6 @@
 <ng-template #createQuiz>
   <div class="shadow-sm">
-    <div class="modal-header bg-white">
+    <div class="modal-header">
       <h5 class="modal-title">Create a quiz</h5>
     </div>
     <div class="modal-body">
