--- a/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.html
+++ b/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.html
@@ -4,51 +4,73 @@
   </div>
 </div>
 
-<div class="container" hidden #container>
+<ng-template #flashcardsConfig>
+  <div class="shadow-sm">
+    <div class="modal-header">
+      <h5 class="modal-title">Flashcards configuration</h5>
+    </div>
+    <div class="modal-body">
+      <form #configForm="ngForm" (ngSubmit)="beginFlashcards(configForm)" ngNativeValidate>
+        <div class="mb-2">
+          <label for="traditional-radio" class="form-label fs-5">Type</label>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="flashcards-type" id="traditional-radio" value="traditional" ngModel required>
+            <label class="form-check-label" for="traditional-radio">Traditional</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="flashcards-type" id="progressive-radio" value="progressive" ngModel required>
+            <label class="form-check-label" for="progressive-radio">Progressive</label>
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="term-radio" class="form-label fs-5">Answer with</label>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="answer-with" id="term-radio" value="term" ngModel required>
+            <label class="form-check-label" for="term-radio">Term</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="answer-with" id="definition-radio" value="definition" ngModel required>
+            <label class="form-check-label" for="definition-radio">Definition</label>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Begin quiz</button>
+      </form>
+    </div>
+  </div>
+</ng-template>
+
+<div class="container" *ngIf="flashcardsMode" #container>
   <div class="row">
     <div class="flashcard card text-center shadow-sm" [ngClass]="{'flip-back': flipped && flipInteraction, 'flip-forwards': !flipped && flipInteraction}" #flashcard>
-      <div class="card-body fs-1 d-flex align-items-center justify-content-center" onmousedown="return false" (click)="flipCard()"></div>
+      <div class="card-body fs-1 d-flex align-items-center justify-content-center" onmousedown="return false" (click)="flipCard()">{{sideText}}</div>
     </div>
   </div>
 
   <div class="row mt-3">
     <div class="card text-center shadow-sm">
       <div class="card-body">
-        <div class="mt-2 d-flex justify-content-around" *ngIf="cards">
+        <div class="mt-2 d-flex justify-content-around" *ngIf="cards && flashcardsMode === 'traditional'">
           <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3" (click)="changeCard(-1)" [disabled]="index === 0 ? true : null"><fa-icon [icon]="['far', 'arrow-alt-circle-left']"></fa-icon></button>
           <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3" (click)="changeCard(1)" [disabled]="cards.length === index + 1 ? true : null"><fa-icon [icon]="['far', 'arrow-alt-circle-right']"></fa-icon></button>
         </div>
+        <div class="mt-2 d-flex justify-content-around" *ngIf="cards && flashcardsMode !== 'traditional'">
+          <button type="button" class="fs-4 w-25 btn btn-outline-warning mb-3 fw-bold" (click)="changeCard(-1)" [disabled]="index === 0 ? true : null">Don't know</button>
+          <button type="button" class="fs-4 w-25 btn btn-outline-success mb-3 fw-bold" (click)="changeCard(1)" [disabled]="cards.length === index + 1 ? true : null">Know</button>
+        </div>
         <div class="mx-2 d-flex justify-content-between">
-          <p class="text-secondary">{{side}}</p>
+          <p class="text-secondary side">{{side}}</p>
           <fa-icon class="fs-4 mb-2 text-secondary shuffle" (click)="this.shuffleCards()" [style.color]="shufflingEnabled ? '#8438ff !important' : '#6c757d !important'" [icon]="faShuffle"></fa-icon>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="d-flex container-fluid justify-content-between w-100 bg-white fixed-bottom shadow align-items-center" #controlbar>
-    <fa-icon class="fs-2 back-arrow" [routerLink]="['/study-set', setId]" [icon]="['far', 'arrow-alt-circle-left']"></fa-icon>
-    <div class="fs-2"></div>
-    <div class="ms-2 my-2">
-      <button type="button" class="btn btn-outline-primary" (click)="this.modalRef = this.modalService.show(this.settings);">Settings</button>
-    </div>
+  <div class="d-flex container-fluid justify-content-between w-100 bg-white fixed-bottom shadow align-items-center controlbar" #controlbar>
+    <fa-icon class="fs-2 back-arrow" (click)="window.location.reload()" [icon]="['far', 'arrow-alt-circle-left']"></fa-icon>
+    <div class="fs-3">{{remainingCards}}</div>
   </div>
 </div>
 
-<ng-template #settings>
-  <div class="modal-header">
-    <h4 class="modal-title pull-left fs-1">Settings</h4>
-    <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
-      <span aria-hidden="true" class="visually-hidden">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <div class="mb-1 fs-5">Answer with</div>
-    <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-      <input type="radio" class="btn-check" name="definitionRadio" id="definition" autocomplete="off" [checked]="answer === 'Definition'" (click)="answer = 'Definition'; (side === answer) && flipCard();">
-      <label class="btn btn-outline-secondary fs-6" for="definition">Definition</label>
-      <input type="radio" class="btn-check" name="termRadio" id="term" autocomplete="off" [checked]="answer === 'Term'" (click)="answer = 'Term'; (side === answer) && flipCard('settings');">
-      <label class="btn btn-outline-secondary" for="term">Term</label>
-    </div>
-  </div>
-</ng-template>
+<div class="d-flex container-fluid justify-content-between w-100 bg-white fixed-bottom shadow align-items-center controlbar" *ngIf="!flashcardsMode">
+  <fa-icon class="fs-2 back-arrow" [routerLink]="['/study-set', setId]" [icon]="['far', 'arrow-alt-circle-left']"></fa-icon>
+</div>
