--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
@@ -34,7 +34,7 @@
           </div>
           <div class="d-flex justify-content-between mt-4 mb-4">
             <p class="text-secondary fs-6 fw-light">* Quizzes do not save between reloads</p>
-            <button type="submit" class="btn btn-primary">Begin quiz</button>
+            <button type="submit" class="btn btn-primary">Start</button>
           </div>
         </div>
       </form>
