--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.scss
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.scss
@@ -4,12 +4,8 @@
   cursor: pointer;
 }
 
-.quiz-creator {
-  margin-top: 4vh;
-}
-
-.navigation-bar {
-  z-index: 1060;
+.configuration {
+  margin-top: 2vh;
 }
 
 @media only screen and (min-device-width : 768px) and (max-device-width : 7680px) {
