Fix mobile card height, use native routing for reloading

--- a/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.scss
+++ b/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.scss
@@ -81,6 +81,12 @@
   }
 }
 
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .flashcard {
+    min-height: 45vh;
+  }
+}
+
 @media only screen and (min-device-width : 768px) and (max-device-width : 7680px) {
   .container {
     margin-top: 5vh;
