--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column justify-content-center align-items-center configuration" *ngIf="!created">
-  <div class="card">
+  <div class="card shadow-sm">
     <div class="card-body">
       <h2>Quiz configuration</h2>
       <form #optionsForm="ngForm" (ngSubmit)="beginQuiz(optionsForm)" class="fs-5 ms-n5" ngNativeValidate>
