--- a/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.html
+++ b/apps/front/src/app/study-set/study-set-flashcards/study-set-flashcards.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column justify-content-center align-items-center message" *ngIf="!side">
-  <div class="card">
+  <div class="card shadow-sm">
     <div class="card-body">
       <h2>Flashcards configuration</h2>
       <form #configForm="ngForm" (ngSubmit)="beginFlashcards(configForm)" ngNativeValidate>
@@ -58,7 +58,7 @@
             </div>
             <div *ngIf="cards.length === 0">
               <p>You learned all of the cards in this set. Now - do it again!</p>
-              <button *ngIf="cards.length === 0" class="btn btn-primary" (click)="window.location.reload()">Start over</button>
+              <button *ngIf="cards.length === 0" class="btn btn-primary" (click)="reloadPage()">Start over</button>
             </div>
           </div>
         </div>
@@ -95,6 +95,6 @@
 </div>
 
 <div class="d-flex container-fluid justify-content-between w-100 bg-white fixed-bottom shadow align-items-center controlbar">
-  <fa-icon class="fs-2 back-arrow" *ngIf="flashcardsMode" (click)="window.location.reload()" [icon]="['far', 'arrow-alt-circle-left']"></fa-icon>
+  <fa-icon class="fs-2 back-arrow" *ngIf="flashcardsMode" (click)="reloadPage()" [icon]="['far', 'arrow-alt-circle-left']"></fa-icon>
   <fa-icon class="fs-2 back-arrow" *ngIf="!flashcardsMode" [routerLink]="['/study-set', setId]" [icon]="['far', 'arrow-alt-circle-left']"></fa-icon>
 </div>
