--- a/apps/front/src/app/shared/header/header.component.html
+++ b/apps/front/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm sticky-top bg-white fs-5 shadow-sm" [hidden]="hidden">
   <div class="container-fluid">
-    <a [routerLink]="this.cookieService.get('authenticated') ? '/homepage' : ''"><img class="navbar-brand img-fluid mt-1" src="assets/scholarsome-logo-purple-lowercase.svg" alt="Scholarsome" width="10%" height="10%"></a>
+    <a [routerLink]="this.cookieService.get('authenticated') ? '/homepage' : ''"><img class="navbar-brand img-fluid mt-1" src="assets/header/scholarsome-logo-purple-lowercase.svg" alt="Scholarsome" width="10%" height="10%"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,7 +16,8 @@
           </button>
           <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu">
             <li><a class="dropdown-item" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" (click)="!this.cookieService.get('authenticated') ? openModal(login) : ''" [routerLink]="this.cookieService.get('authenticated') ? 'create/set' : undefined"><fa-icon [icon]="['far', 'clone']"></fa-icon> &nbsp;Study set</a></li>
-            <li><a class="dropdown-item" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" (click)="this.cookieService.get('authenticated')? openModal(importSet) : openModal(login)"><fa-icon [icon]="faQ"></fa-icon> &nbsp;Import set</a></li>
+            <li><a class="dropdown-item" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" (click)="this.cookieService.get('authenticated')? openModal(quizletImportModal) : openModal(login)"><fa-icon [icon]="faQ" class="quizlet-color"></fa-icon> &nbsp;From Quizlet</a></li>
+            <li><a class="dropdown-item" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" (click)="this.cookieService.get('authenticated')? openModal(ankiImportModal) : openModal(login)"><fa-icon [icon]="faStar" class="anki-color"></fa-icon> &nbsp;From Anki</a></li>
           </ul>
         </li>
       </ul>
@@ -124,7 +125,7 @@
   </div>
 </ng-template>
 
-<ng-template #forgot>
+<ng-template #forgotModal>
   <div class="modal-header bg-white">
     <h4 class="modal-title pull-left">Forgot password</h4>
     <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="this.modalRef?.hide()">
@@ -169,7 +170,7 @@
   </div>
 </ng-template>
 
-<ng-template #importSet>
+<ng-template #quizletImportModal>
   <div class="modal-body">
     <div class="d-flex justify-content-end">
       <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
@@ -178,25 +179,68 @@
     </div>
     <div class="col">
       <div class="row text-center">
-        <fa-icon [icon]="faQ" class="import-logo"></fa-icon>
+        <fa-icon [icon]="faQ" class="quizlet-import-logo quizlet-color"></fa-icon>
         <div class="fs-3 mb-2">Import a study set from Quizlet</div>
-        <div class="fs-6 text-secondary">If you've created a Quizlet set, you can import it to Scholarsome. Click the link to view how to export your sets.<br><br>Use the tab and semicolon options. Paste the set in the box below, and click import.<br><br><a href="https://help.quizlet.com/hc/en-us/articles/360034345672-Exporting-your-sets" target="_blank">https://help.quizlet.com/hc/en-us/articles/360034345672-Exporting-your-sets</a></div>
+        <div class="fs-6 text-secondary">If you've created a Quizlet set, you can import it to Scholarsome. Click <a href="https://help.quizlet.com/hc/en-us/articles/360034345672-Exporting-your-sets" target="_blank">here</a> to view how to export your sets.<br><br>Use the tab and semicolon options. Paste the set in the box below, and click import.<br><br></div>
       </div>
     </div>
     <hr>
-    <form class="mt-3" (ngSubmit)="submitImportSet(importSetForm)" #importSetForm="ngForm" ngNativeValidate>
-      <input type="input" class="form-control mb-3" placeholder="Enter a title for your study set..." maxlength="255" name="importTitle" [disabled]="importSetClicked" ngModel required>
-      <div class="form-check mb-3">
-        <input type="checkbox" class="form-check-input" id="importPrivateCheck" name="importPrivateCheck" [disabled]="importSetClicked" ngModel>
-        <label class="form-check-label" for="importPrivateCheck">Viewable only to me</label>
+    <form class="mt-3" (ngSubmit)="submitQuizletImport(quizletImportForm)" #quizletImportForm="ngForm" ngNativeValidate>
+      <div class="mb-3">
+        <input type="text" class="form-control" placeholder="Enter a title for your study set..." maxlength="255" name="title" [disabled]="ankiImportClicked" ngModel required>
       </div>
       <div class="mb-3">
-        <textarea class="form-control" rows="6" name="importSet" placeholder="Paste in your exported set here..." [disabled]="importSetClicked" ngModel ngDefaultControl required></textarea>
-        <div *ngIf="importSetRes === 'pattern'" class="form-text text-danger">Your exported set is not correctly formatted.</div>
+        <textarea class="form-control" name="description" placeholder="Add a description..." [disabled]="quizletImportClicked" ngModel ngDefaultControl></textarea>
+      </div>
+      <div class="form-check mb-3">
+        <input type="checkbox" class="form-check-input" id="quizletImportPrivateCheck" name="privateCheck" [disabled]="quizletImportClicked" ngModel>
+        <label class="form-check-label" for="quizletImportPrivateCheck">Viewable only to me</label>
+      </div>
+      <div class="mb-3">
+        <textarea class="form-control" rows="6" name="importSet" placeholder="Paste in your exported set here..." [disabled]="quizletImportClicked" ngModel ngDefaultControl required></textarea>
+        <div *ngIf="quizletImportRes === 'pattern'" class="form-text text-danger">Your exported set is not correctly formatted.</div>
       </div>
       <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" [disabled]="importSetClicked">
-          <span *ngIf="importSetClicked" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>Import</button>
+        <button type="submit" class="btn btn-primary" [disabled]="quizletImportClicked">
+          <span *ngIf="quizletImportClicked" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>Import</button>
+      </div>
+    </form>
+  </div>
+</ng-template>
+
+<ng-template #ankiImportModal>
+  <div class="modal-body">
+    <div class="d-flex justify-content-end">
+      <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
+        <span aria-hidden="true" class="visually-hidden">&times;</span>
+      </button>
+    </div>
+    <div class="col">
+      <div class="row text-center justify-content-center">
+        <img src="assets/header/anki.jpeg" class="mb-2 anki-import-logo">
+        <div class="fs-3 mb-2">Import a study set from Anki</div>
+        <div class="fs-6 text-secondary">If you've created a set in Anki, you can import it to Scholarsome. Click <a href="https://docs.ankiweb.net/exporting.html#deck-apkg" target="_blank">here</a> to view how to export your sets as a .apkg file.<br><br>Note that, at the moment, only basic notes are supported.<br><br></div>
+      </div>
+    </div>
+    <hr>
+    <form class="mt-3" (ngSubmit)="submitAnkiImport(ankiImportForm)" #ankiImportForm="ngForm" ngNativeValidate>
+      <div class="mb-3">
+        <input type="text" class="form-control" placeholder="Enter a title for your study set..." maxlength="255" name="title" [disabled]="ankiImportClicked" ngModel required>
+      </div>
+      <div class="mb-3">
+        <textarea class="form-control" name="description" placeholder="Add a description..." [disabled]="ankiImportClicked" ngModel ngDefaultControl></textarea>
+      </div>
+      <div class="form-check mb-3">
+        <input type="checkbox" class="form-check-input" id="ankiImportPrivateCheck" name="privateCheck" [disabled]="ankiImportClicked" ngModel>
+        <label class="form-check-label" for="ankiImportPrivateCheck">Viewable only to me</label>
+      </div>
+      <div class="mb-3">
+        <input type="file" accept=".apkg" class="form-control" name="file" (change)="onAnkiFileUpload($event)" [disabled]="ankiImportClicked" ngModel required>
+        <div *ngIf="ankiImportRes === 'incompatible'" class="form-text text-danger">The note types in this .apkg are not currently compatible with Scholarsome.</div>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-primary" [disabled]="ankiImportClicked">
+          <span *ngIf="ankiImportClicked" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>Import</button>
       </div>
     </form>
   </div>
