Add rich text editor for card editing

--- a/apps/front/src/app/shared/header/header.component.html
+++ b/apps/front/src/app/shared/header/header.component.html
@@ -181,7 +181,7 @@
       <div class="row text-center">
         <fa-icon [icon]="faQ" class="quizlet-import-logo quizlet-color"></fa-icon>
         <div class="fs-3 mb-2">Import a study set from Quizlet</div>
-        <div class="fs-6 text-secondary">If you've created a Quizlet set, you can import it to Scholarsome. Click <a href="https://help.quizlet.com/hc/en-us/articles/360034345672-Exporting-your-sets" target="_blank">here</a> to view how to export your sets.<br><br>Use the tab and semicolon options. Paste the set in the box below, and click import.<br><br></div>
+        <div class="fs-6 text-secondary">If you've created a Quizlet set, you can import it to Scholarsome. Click <a href="https://help.quizlet.com/hc/en-us/articles/360034345672-Exporting-your-sets" target="_blank">here</a> to view how to export your sets.<br><br>Use the tab and semicolon options. Paste the set in the box below, and click import.</div>
       </div>
     </div>
     <hr>
@@ -219,7 +219,7 @@
       <div class="row text-center justify-content-center">
         <img src="assets/header/anki.jpeg" class="mb-2 anki-import-logo">
         <div class="fs-3 mb-2">Import a study set from Anki</div>
-        <div class="fs-6 text-secondary">If you've created a set in Anki, you can import it to Scholarsome. Click <a href="https://docs.ankiweb.net/exporting.html#deck-apkg" target="_blank">here</a> to view how to export your sets as a .apkg file.<br><br>Note that, at the moment, only basic notes are supported.<br><br></div>
+        <div class="fs-6 text-secondary">If you've created a set in Anki, you can import it to Scholarsome. Click <a href="https://docs.ankiweb.net/exporting.html#deck-apkg" target="_blank">here</a> to view how to export your sets as a .apkg file.<br><br>Note that, at the moment, only basic notes are supported.</div>
       </div>
     </div>
     <hr>
