--- a/apps/front/src/app/shared/card/card.component.html
+++ b/apps/front/src/app/shared/card/card.component.html
@@ -4,25 +4,40 @@
       <div class="d-flex justify-content-between">
         <span>{{cardIndex + 1}}.</span>
         <div>
+          <fa-icon [icon]="faPenToSquare" class="mx-3 card-button" (click)="openModal(editModal)"></fa-icon>
           <fa-icon *ngIf="upArrow" [icon]="['far', 'arrow-alt-circle-up']" class="mx-3 card-button" (click)="moveCard(-1)"></fa-icon>
           <fa-icon *ngIf="downArrow" [icon]="['far', 'arrow-alt-circle-down']" class="mx-3 card-button" (click)="moveCard(1)"></fa-icon>
           <fa-icon *ngIf="trashCan" [icon]="['far', 'trash-can']" class="ms-3 card-button" (click)="deleteCard()"></fa-icon>
         </div>
       </div>
     </div>
-    <div class="container-fluid" #inputsContainer>
+    <div class="container-fluid" *ngIf="termValue && definitionValue" #inputsContainer>
       <div class="row">
-        <div class="col border-end fs-5 w-50" [hidden]="editingEnabled" [innerHTML]="termValue"></div>
-        <div class="col fs-5 w-50" [hidden]="editingEnabled" [innerHTML]="definitionValue"></div>
-        <div class="col-lg" [hidden]="!editingEnabled">
-          <label for="term" class="form-label">Term</label>
-          <input type="text" class="form-control" id="term" [value]="termValue ? termValue : ''" #term>
-        </div>
-        <div class="col-lg" [hidden]="!editingEnabled">
-          <label for="definition" class="form-label">Definition</label>
-          <input type="text" class="form-control" id="definition" [value]="definitionValue ? definitionValue : ''" #definition>
-        </div>
+        <div class="col border-end fs-5 w-50" [innerHTML]="mainTerm" #term></div>
+        <div class="col fs-5 w-50 overflow-hidden" [innerHTML]="mainDefinition" #definition></div>
       </div>
     </div>
   </div>
 </div>
+
+<ng-template #editModal>
+  <div class="modal-header">
+    <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
+      <span aria-hidden="true" class="visually-hidden">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="container-fluid">
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col border-end">
+          <p class="fs-2">Term</p>
+          <angular-editor [config]="editorConfig" [(ngModel)]="termValue" id="termEditor"></angular-editor>
+        </div>
+        <div class="col mt-4 mt-lg-0">
+          <p class="fs-2 pull-right">Definition</p>
+          <angular-editor [config]="editorConfig" [(ngModel)]="definitionValue" id="definitionEditor"></angular-editor>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
