--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -29,3 +29,21 @@ body {
 textarea {
   resize: none;
 }
+
+.modal-open {
+  overflow: hidden !important;
+  overflow-y: inherit !important;
+  padding-right:0 !important;
+}
+
+.angular-editor-toolbar {
+  background-color: #FFFFFF !important;
+}
+
+.angular-editor-button.active {
+  background-color: lightgrey !important;
+}
+
+.angular-editor-textarea {
+  resize: none !important;
+}
