--- a/apps/front/src/app/shared/card/card.component.html
+++ b/apps/front/src/app/shared/card/card.component.html
@@ -11,8 +11,9 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid" *ngIf="termValue && definitionValue" #inputsContainer>
-      <div class="row">
+    <div class="container-fluid" #inputsContainer>
+      <span class="text-secondary" *ngIf="mainTerm.length === 0 && mainDefinition.length === 0">Click <span class="text-decoration-underline edit-text" (click)="openModal(editModal)">here</span> to edit this card.</span>
+      <div class="row" *ngIf="termValue || definitionValue">
         <div class="col border-end fs-5 w-50" [innerHTML]="mainTerm" #term></div>
         <div class="col fs-5 w-50 overflow-hidden" [innerHTML]="mainDefinition" #definition></div>
       </div>
@@ -22,6 +23,7 @@
 
 <ng-template #editModal>
   <div class="modal-header">
+    <span class="pull-left text-secondary">* Both term and definition must be filled</span>
     <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
       <span aria-hidden="true" class="visually-hidden">&times;</span>
     </button>
