--- a/apps/front/src/app/shared/card/card.component.html
+++ b/apps/front/src/app/shared/card/card.component.html
@@ -14,7 +14,7 @@
     <div class="container-fluid" #inputsContainer>
       <span class="text-secondary" *ngIf="mainTerm.length === 0 && mainDefinition.length === 0">Click <span class="text-decoration-underline edit-text" (click)="openModal(editModal)">here</span> to edit this card.</span>
       <div class="row" *ngIf="termValue || definitionValue">
-        <div class="col border-end fs-5 w-50" [innerHTML]="mainTerm" #term></div>
+        <div class="col border-end fs-5 w-50 overflow-hidden" [innerHTML]="mainTerm" #term></div>
         <div class="col fs-5 w-50 overflow-hidden" [innerHTML]="mainDefinition" #definition></div>
       </div>
     </div>
