--- a/apps/front/src/app/shared/card/card.component.html
+++ b/apps/front/src/app/shared/card/card.component.html
@@ -4,7 +4,7 @@
       <div class="d-flex justify-content-between">
         <span>{{cardIndex + 1}}.</span>
         <div>
-          <fa-icon [icon]="faPenToSquare" class="mx-3 card-button" (click)="openModal(editModal)"></fa-icon>
+          <fa-icon [icon]="faPenToSquare" class="mx-3 card-button" (click)="openEditModal()"></fa-icon>
           <fa-icon *ngIf="upArrow" [icon]="['far', 'arrow-alt-circle-up']" class="mx-3 card-button" (click)="moveCard(-1)"></fa-icon>
           <fa-icon *ngIf="downArrow" [icon]="['far', 'arrow-alt-circle-down']" class="mx-3 card-button" (click)="moveCard(1)"></fa-icon>
           <fa-icon *ngIf="trashCan" [icon]="['far', 'trash-can']" class="ms-3 card-button" (click)="deleteCard()"></fa-icon>
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="container-fluid" #inputsContainer>
-      <span class="text-secondary" *ngIf="mainTerm.length === 0 && mainDefinition.length === 0">Click <span class="text-decoration-underline edit-text" (click)="openModal(editModal)">here</span> to edit this card.</span>
+      <span class="text-secondary" *ngIf="mainTerm.length === 0 && mainDefinition.length === 0">Click <span class="text-decoration-underline edit-text" (click)="openEditModal()">here</span> to edit this card.</span>
       <div class="row" *ngIf="termValue || definitionValue">
         <div class="col border-end fs-5 w-50 h-100 overflow-hidden" [innerHTML]="sanitizer.bypassSecurityTrustHtml(mainTerm)" #term></div>
         <div class="col fs-5 w-50 h-100 overflow-hidden" [innerHTML]="sanitizer.bypassSecurityTrustHtml(mainDefinition)" #definition></div>
