--- a/apps/front/src/app/study-set/study-set.component.html
+++ b/apps/front/src/app/study-set/study-set.component.html
@@ -59,6 +59,15 @@
       </div>
     </div>
     <div>
+      <div class="container-fluid" [hidden]="!isEditing">
+        <div class="row">
+          <div class="card bg-white">
+            <div class="card-body d-flex justify-content-center mt-2 fs-4 new-card" (click)="addCard({ editingEnabled: true })">
+              <p><fa-icon [icon]="['far', 'plus-square']" class="pe-1"></fa-icon>Add new card</p>
+            </div>
+          </div>
+        </div>
+      </div>
       <div #cardsContainer></div>
       <div class="container-fluid" [hidden]="!isEditing">
         <div class="row">
