--- a/apps/front/src/app/create/study-set/create-study-set.component.html
+++ b/apps/front/src/app/create/study-set/create-study-set.component.html
@@ -22,11 +22,16 @@
       <hr>
     </div>
     <div class="container-fluid">
+      <div class="row mx-4">
+        <div class="card my-3 bg-white">
+          <div class="card-body d-flex justify-content-center mt-2 fs-4 new-card" (click)="addCard()">
+            <p><fa-icon [icon]="['far', 'plus-square']" class="pe-1"></fa-icon>Add new card</p>
+          </div>
+        </div>
+      </div>
       <div class="row mx-3">
         <ng-template #cardList></ng-template>
       </div>
-    </div>
-    <div class="container-fluid">
       <div class="row mx-4">
         <div class="card my-3 bg-white">
           <div class="card-body d-flex justify-content-center mt-2 fs-4 new-card" (click)="addCard()">
