--- a/apps/front/src/app/header/header.component.html
+++ b/apps/front/src/app/header/header.component.html
@@ -39,6 +39,9 @@
             >Home</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-black" aria-current="page" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" href="/docs">Documentation</a>
+        </li>
         <li class="btn-group" dropdown>
           <button
             id="button-basic"
