--- a/apps/front/src/app/header/header.component.html
+++ b/apps/front/src/app/header/header.component.html
@@ -9,6 +9,9 @@
         <li class="nav-item">
           <a class="nav-link text-black" aria-current="page" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" [routerLink]="this.cookieService.get('authenticated') ? '/homepage' : ''">Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-black" aria-current="page" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" href="/docs">Documentation</a>
+        </li>
         <li class="btn-group" dropdown>
           <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle fs-5 h-100 w-25"
                   aria-controls="dropdown-basic">
